data/derived/comb/progs/unify/prog3940.ml.out
Characters 70-82:
  | h::t -> if h = 0 then removeZero t;;
                          ^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type unit
